# test6

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  Makefile  README.md  bank.db  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ActionModal.css  ActionModal.jsx  BalanceCard.css  BalanceCard.jsx  Navbar.css  Navbar.jsx  TransactionList.css  TransactionList.jsx
frontend/src/pages/: Auth.css  Dashboard.css  Dashboard.jsx  Login.jsx  Register.jsx
src/test6/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
src/test6/routers/: __init__.py  accounts.py  auth.py  transactions.py
src/your_package/: __init__.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_example.py
